changed to use a scratch directory